--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1188</width>
-    <height>856</height>
+    <width>1375</width>
+    <height>892</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -49,8 +49,21 @@
            <layout class="QGridLayout" name="gridLayout_2">
             <item row="0" column="0">
              <layout class="QGridLayout" name="gridLayout">
+              <item row="0" column="0">
+               <widget class="QPushButton" name="UI_browse_btn">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="text">
+                 <string>Browse</string>
+                </property>
+               </widget>
+              </item>
               <item row="0" column="1">
-               <widget class="QLineEdit" name="lineEdit">
+               <widget class="QLineEdit" name="UI_browse_LE">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
                   <horstretch>0</horstretch>
@@ -62,19 +75,6 @@
                 </property>
                 <property name="placeholderText">
                  <string>No rocket selected</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QPushButton" name="pushButton">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="text">
-                 <string>Browse for Rocket</string>
                 </property>
                </widget>
               </item>
@@ -129,8 +129,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1188</width>
-     <height>30</height>
+     <width>1375</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
