--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -79,7 +79,7 @@
                </widget>
               </item>
               <item row="1" column="0">
-               <widget class="QPushButton" name="logFile_btn">
+               <widget class="QPushButton" name="UI_logfile_btn">
                 <property name="text">
                  <string>Load Log</string>
                 </property>
@@ -88,6 +88,9 @@
               <item row="1" column="1">
                <widget class="QLineEdit" name="lineEdit">
                 <property name="text">
+                 <string/>
+                </property>
+                <property name="placeholderText">
                  <string>No log file selected</string>
                 </property>
                </widget>
