--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -49,6 +49,19 @@
            <layout class="QGridLayout" name="gridLayout_2">
             <item row="0" column="0">
              <layout class="QGridLayout" name="gridLayout">
+              <item row="0" column="0">
+               <widget class="QPushButton" name="UI_browse_btn">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="text">
+                 <string>Browse</string>
+                </property>
+               </widget>
+              </item>
               <item row="0" column="1">
                <widget class="QLineEdit" name="UI_browse_LE">
                 <property name="sizePolicy">
@@ -62,19 +75,6 @@
                 </property>
                 <property name="placeholderText">
                  <string>No rocket selected</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QPushButton" name="UI_browse_btn">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="text">
-                 <string>Browse</string>
                 </property>
                </widget>
               </item>
@@ -92,6 +92,13 @@
                 </property>
                 <property name="placeholderText">
                  <string>No log file selected</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="2">
+               <widget class="QPushButton" name="UI_clearlog">
+                <property name="text">
+                 <string>Clear</string>
                 </property>
                </widget>
               </item>
@@ -147,7 +154,7 @@
      <x>0</x>
      <y>0</y>
      <width>1375</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
