--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -96,7 +96,7 @@
                </widget>
               </item>
               <item row="1" column="2">
-               <widget class="QPushButton" name="UI_clearlog">
+               <widget class="QPushButton" name="UI_clearlog_btn">
                 <property name="text">
                  <string>Clear</string>
                 </property>
@@ -154,7 +154,7 @@
      <x>0</x>
      <y>0</y>
      <width>1375</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
