--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -296,7 +296,7 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>TextLabel</string>
+                    <string>TIme</string>
                    </property>
                   </widget>
                  </item>
