--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -245,6 +245,9 @@
                      <property name="text">
                       <string>Play/Pause</string>
                      </property>
+                     <property name="checkable">
+                      <bool>true</bool>
+                     </property>
                     </widget>
                    </item>
                    <item>
@@ -328,7 +331,7 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>TIme</string>
+                    <string>Time</string>
                    </property>
                   </widget>
                  </item>
